Banner and nav styles started.

--- a/index.html
+++ b/index.html
@@ -75,15 +75,19 @@
   <!-- Banner -->
   <div id="banner">
     <h1>&lt;S/ACoding&gt;</h1>
+    <h3>Learn coding from scratch</h3>
   </div>
 
-  <!-- Main Content - article cards -->
+  <!-- Main Content -->
   <main>
+
+    <!-- Blog Section -->
     <a href="#">
       <h2 class="section-heading">All Blogs</h2>
     </a>
 
     <section>
+      <!-- Featured Blog Article 1 -->
       <div class="card">
         <div class="card-image">
           <a href="#">
@@ -100,7 +104,124 @@
           <a href="#" class="btn-read-more">Read more</a>
         </div>
       </div>
+      <!-- Featured Blog Article 2 -->
+      <div class="card">
+        <div class="card-image">
+          <a href="#">
+            <img src="img/2.jpg" alt="Card image">
+          </a>
+        </div>
+        <div class="card-description">
+          <a href="#">
+            <h3>The Blog Title Here</h3>
+          </a>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima rem adipisci in, deserunt veritatis quas
+            est harum similique cum? Molestiae doloribus, alias, nesciunt dignissimos saepe nulla minus facere maiores
+            ipsa non, animi officiis eaque!</p>
+          <a href="#" class="btn-read-more">Read more</a>
+        </div>
+      </div>
     </section>
+
+    <!-- Projects Section -->
+    <a href="#">
+      <h2 class="section-heading">All Projects</h2>
+    </a>
+
+    <section>
+      <!-- Featured Project 1 -->
+      <div class="card">
+        <div class="card-image">
+          <a href="#">
+            <img src="img/3.jpg" alt="Card image">
+          </a>
+        </div>
+        <div class="card-description">
+          <a href="#">
+            <h3>Project Title Here</h3>
+          </a>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima rem adipisci in, deserunt veritatis quas
+            est harum similique cum? Molestiae doloribus, alias, nesciunt dignissimos saepe nulla minus facere maiores
+            ipsa non, animi officiis eaque!</p>
+          <a href="#" class="btn-read-more">Read more</a>
+        </div>
+      </div>
+      <!-- Featured Project 2 -->
+      <div class="card">
+        <div class="card-image">
+          <a href="#">
+            <img src="img/4.jpg" alt="Card image">
+          </a>
+        </div>
+        <div class="card-description">
+          <a href="#">
+            <h3>The Blog Title Here</h3>
+          </a>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima rem adipisci in, deserunt veritatis quas
+            est harum similique cum? Molestiae doloribus, alias, nesciunt dignissimos saepe nulla minus facere maiores
+            ipsa non, animi officiis eaque!</p>
+          <a href="#" class="btn-read-more">Read more</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Source Code Section -->
+    <h2 class="section-heading">Source Code</h2>
+
+    <section id="source-code-section">
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum recusandae, saepe soluta corrupti earum maiores
+        ex harum eveniet vel rerum ad dignissimos error officia placeat necessitatibus, accusamus labore consequuntur,
+        numquam dolorem praesentium? Porro quis voluptatum sapiente quibusdam nihil aspernatur saepe?</p>
+      <a href="#">GitHub Profile</a>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+      <div id="footer-left">
+        <h3>Quick links</h3>
+        <p>
+          <ul>
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">Privacy Policy</a>
+            </li>
+            <li>
+              <a href="#">Blogs</a>
+            </li>
+            <li>
+              <a href="#">Projects</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </p>
+      </div>
+
+
+      <div id="footer-right">
+        <h3>Follow is on</h3>
+        <div id="social-media-footer">
+          <ul>
+            <li>
+              <a href="#"><i class="fa fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-youtube"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-github"></i></a>
+            </li>
+          </ul>
+        </div>
+        <p>This website is developed by SACoding</p>
+      </div>
+    </footer>
   </main>
 </body>
 
