--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <!-- Main Navigation -->
   <nav>
-    <div class="logo-img">
+    <div class="logo">
       <a href="#">
         <img src="img/logo.png" alt="SACoding Logo">
       </a>
@@ -48,7 +48,7 @@
     </div>
     <ul>
       <li>
-        <a href="#">Home</a>
+        <a href="#" class="active">Home</a>
       </li>
       <li>
         <a href="#">Blog</a>
@@ -74,7 +74,7 @@
 
   <!-- Banner -->
   <div id="banner">
-    <h1>&lt;S/ACoding&gt;</h1>
+    <h1>&lt; S/ACoding &gt;</h1>
     <h3>Learn coding from scratch</h3>
   </div>
 
