--- a/index.html
+++ b/index.html
@@ -172,57 +172,55 @@
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum recusandae, saepe soluta corrupti earum maiores
         ex harum eveniet vel rerum ad dignissimos error officia placeat necessitatibus, accusamus labore consequuntur,
         numquam dolorem praesentium? Porro quis voluptatum sapiente quibusdam nihil aspernatur saepe?</p>
-      <a href="#">GitHub Profile</a>
+      <a href="#" class="btn-read-more">GitHub Profile</a>
     </section>
-
-    <!-- Footer -->
-    <footer>
-      <div id="footer-left">
-        <h3>Quick links</h3>
-        <p>
-          <ul>
-            <li>
-              <a href="#">Home</a>
-            </li>
-            <li>
-              <a href="#">About</a>
-            </li>
-            <li>
-              <a href="#">Privacy Policy</a>
-            </li>
-            <li>
-              <a href="#">Blogs</a>
-            </li>
-            <li>
-              <a href="#">Projects</a>
-            </li>
-            <li>
-              <a href="#">Contact</a>
-            </li>
-          </ul>
-        </p>
-      </div>
-
-
-      <div id="footer-right">
-        <h3>Follow is on</h3>
-        <div id="social-media-footer">
-          <ul>
-            <li>
-              <a href="#"><i class="fa fa-facebook"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-youtube"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-github"></i></a>
-            </li>
-          </ul>
-        </div>
-        <p>This website is developed by SACoding</p>
-      </div>
-    </footer>
   </main>
+      <!-- Footer -->
+      <footer>
+        <div id="footer-left">
+          <h3>Quick links</h3>
+          <p>
+            <ul>
+              <li>
+                <a href="#">Home</a>
+              </li>
+              <li>
+                <a href="#">About</a>
+              </li>
+              <li>
+                <a href="#">Privacy Policy</a>
+              </li>
+              <li>
+                <a href="#">Blogs</a>
+              </li>
+              <li>
+                <a href="#">Projects</a>
+              </li>
+              <li>
+                <a href="#">Contact</a>
+              </li>
+            </ul>
+          </p>
+        </div>
+  
+        <div id="footer-right">
+          <h3>Follow is on</h3>
+          <div id="social-media-footer">
+            <ul>
+              <li>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-youtube"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-github"></i></a>
+              </li>
+            </ul>
+          </div>
+          <p>This website is developed by SACoding</p>
+        </div>
+      </footer>
 </body>
 
 </html>
