JS for mobile menu and searchbar toggle added.

--- a/index.html
+++ b/index.html
@@ -15,23 +15,19 @@
   <div id="slideout-menu">
     <ul>
       <li>
-        <a href="#">Home</a>
+        <a href="index.html">Home</a>
       </li>
       <li>
-        <a href="#">Blog</a>
+        <a href="blogslist.html">Blog</a>
       </li>
       <li>
-        <a href="#">Projects</a>
+        <a href="blogslist.html">Projects</a>
       </li>
       <li>
-        <a href="#">About</a>
+        <a href="about.html">About</a>
       </li>
       <li>
         <input type="text" placeholder="Search">
-        <br>
-        <a href="#">
-          <i class="fa fa-search"></i>
-        </a>
       </li>
     </ul>
   </div>
@@ -48,16 +44,16 @@
     </div>
     <ul>
       <li>
-        <a href="#" class="active">Home</a>
+        <a href="index.html" class="active">Home</a>
       </li>
       <li>
-        <a href="#">Blog</a>
+        <a href="blogslist.html">Blog</a>
       </li>
       <li>
-        <a href="#">Projects</a>
+        <a href="blogslist.html">Projects</a>
       </li>
       <li>
-        <a href="#">About</a>
+        <a href="about.html">About</a>
       </li>
       <li>
         <div id="search-icon">
@@ -82,7 +78,7 @@
   <main>
 
     <!-- Blog Section -->
-    <a href="#">
+    <a href="blogslist.html">
       <h2 class="section-heading">All Blogs</h2>
     </a>
 
@@ -90,41 +86,41 @@
       <!-- Featured Blog Article 1 -->
       <div class="card">
         <div class="card-image">
-          <a href="#">
+          <a href="blogpost.html">
             <img src="img/1.jpg" alt="Card image">
           </a>
         </div>
         <div class="card-description">
-          <a href="#">
+          <a href="blogpost.html">
             <h3>The Blog Title Here</h3>
           </a>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima rem adipisci in, deserunt veritatis quas
             est harum similique cum? Molestiae doloribus, alias, nesciunt dignissimos saepe nulla minus facere maiores
             ipsa non, animi officiis eaque!</p>
-          <a href="#" class="btn-read-more">Read more</a>
+          <a href="blogpost.html" class="btn-read-more">Read more</a>
         </div>
       </div>
       <!-- Featured Blog Article 2 -->
       <div class="card">
         <div class="card-image">
-          <a href="#">
+          <a href="blogpost.html">
             <img src="img/2.jpg" alt="Card image">
           </a>
         </div>
         <div class="card-description">
-          <a href="#">
+          <a href="blogpost.html">
             <h3>The Blog Title Here</h3>
           </a>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima rem adipisci in, deserunt veritatis quas
             est harum similique cum? Molestiae doloribus, alias, nesciunt dignissimos saepe nulla minus facere maiores
             ipsa non, animi officiis eaque!</p>
-          <a href="#" class="btn-read-more">Read more</a>
+          <a href="blogpost.html" class="btn-read-more">Read more</a>
         </div>
       </div>
     </section>
 
     <!-- Projects Section -->
-    <a href="#">
+    <a href="blogslist.html">
       <h2 class="section-heading">All Projects</h2>
     </a>
 
@@ -132,35 +128,35 @@
       <!-- Featured Project 1 -->
       <div class="card">
         <div class="card-image">
-          <a href="#">
+          <a href="blogpost.html">
             <img src="img/3.jpg" alt="Card image">
           </a>
         </div>
         <div class="card-description">
-          <a href="#">
+          <a href="blogpost.html">
             <h3>Project Title Here</h3>
           </a>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima rem adipisci in, deserunt veritatis quas
             est harum similique cum? Molestiae doloribus, alias, nesciunt dignissimos saepe nulla minus facere maiores
             ipsa non, animi officiis eaque!</p>
-          <a href="#" class="btn-read-more">Read more</a>
+          <a href="blogpost.html" class="btn-read-more">Read more</a>
         </div>
       </div>
       <!-- Featured Project 2 -->
       <div class="card">
         <div class="card-image">
-          <a href="#">
+          <a href="blogpost.html">
             <img src="img/4.jpg" alt="Card image">
           </a>
         </div>
         <div class="card-description">
-          <a href="#">
+          <a href="blogpost.html">
             <h3>The Blog Title Here</h3>
           </a>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima rem adipisci in, deserunt veritatis quas
             est harum similique cum? Molestiae doloribus, alias, nesciunt dignissimos saepe nulla minus facere maiores
             ipsa non, animi officiis eaque!</p>
-          <a href="#" class="btn-read-more">Read more</a>
+          <a href="blogpost.html" class="btn-read-more">Read more</a>
         </div>
       </div>
     </section>
@@ -172,55 +168,55 @@
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum recusandae, saepe soluta corrupti earum maiores
         ex harum eveniet vel rerum ad dignissimos error officia placeat necessitatibus, accusamus labore consequuntur,
         numquam dolorem praesentium? Porro quis voluptatum sapiente quibusdam nihil aspernatur saepe?</p>
-      <a href="#" class="btn-read-more">GitHub Profile</a>
+      <a href="https://github.com/alto4" class="btn-read-more">GitHub Profile</a>
     </section>
   </main>
-      <!-- Footer -->
-      <footer>
-        <div id="footer-left">
-          <h3>Quick links</h3>
-          <p>
-            <ul>
-              <li>
-                <a href="#">Home</a>
-              </li>
-              <li>
-                <a href="#">About</a>
-              </li>
-              <li>
-                <a href="#">Privacy Policy</a>
-              </li>
-              <li>
-                <a href="#">Blogs</a>
-              </li>
-              <li>
-                <a href="#">Projects</a>
-              </li>
-              <li>
-                <a href="#">Contact</a>
-              </li>
-            </ul>
-          </p>
-        </div>
-  
-        <div id="footer-right">
-          <h3>Follow is on</h3>
-          <div id="social-media-footer">
-            <ul>
-              <li>
-                <a href="#"><i class="fa fa-facebook"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-youtube"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-github"></i></a>
-              </li>
-            </ul>
-          </div>
-          <p>This website is developed by SACoding</p>
-        </div>
-      </footer>
+  <!-- Footer -->
+  <footer>
+    <div id="footer-left">
+      <h3>Quick links</h3>
+      <p>
+        <ul>
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="#">Privacy Policy</a>
+          </li>
+          <li>
+            <a href="blogslist.html">Blogs</a>
+          </li>
+          <li>
+            <a href="blogslist.html">Projects</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </p>
+    </div>
+
+    <div id="footer-right">
+      <h3>Follow us on</h3>
+      <div id="social-media-footer">
+        <ul>
+          <li>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-youtube"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-github"></i></a>
+          </li>
+        </ul>
+      </div>
+      <p>This website is developed by SACoding</p>
+    </div>
+    <script src="main.js"></script>
 </body>
 
 </html>
